# fundabot

./: poetry.toml  pyproject.toml
fundabot/: auth.py  business_rules.py  crawler.py  data.py  logs.py  paths.py  preprocess.py  start.py
