[tool.poetry]
name = "fund_bot"
version = "0.1.0"
description = ""
authors = ["Henrique Branco <henrique.ajnbranco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.3.5"
python-telegram-bot = "^13.10"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
